--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@mantine/notifications": "^6.0.17",
     "@mantine/core": "^6.0.17",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tabler/icons-react": "^2.25.0",
     "axios": "^1.5.1",
     "concurrently": "^8.2.0",
     "react": "^18.2.0",
