--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@mantine/notifications": "^6.0.17",
     "@mantine/core": "^6.0.17",
+    "@mantine/notifications": "^6.0.17",
+    "@tabler/icons-react": "^2.25.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tabler/icons-react": "^2.25.0",
     "axios": "^1.5.1",
     "concurrently": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "redux": "^4.2.1",
     "redux-form": "^8.3.8",
-    "react-redux": "^8.0.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
